# aspenEvo

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: XPLMDataAccess.h.FC1B89B83D3FBA0A.idx  XPLMDefs.h.9CB41528A79C0C07.idx  XPLMDisplay.h.A835739820629692.idx  XPLMGraphics.h.F686AD461FDEB627.idx  XPLMPlugin.h.A6956F97D7326C11.idx  XPLMProcessing.h.229533EDA30D30DC.idx  XPLMUtilities.h.9AE3528B82CC2ABE.idx  assert.h.FB793D5D335545C9.idx  core.h.7C19E7B2A52539ED.idx  datarefs.cpp.2842161BB701FDF3.idx  datarefs.h.F07C5C4603E3FFAA.idx  device.cpp.A0BB575EEF45CFD6.idx  device.h.56AA732430F87C5C.idx  dr.h.C30C34D0FC2336FB.idx  globals.cpp.194FC7E45CE009B0.idx  globals.h.2ACAE2BD272C7C17.idx  helpers.h.D067085EA94F1569.idx  lacf_getline_impl.h.A4C3CB3EB3A20AD9.idx  libconfig.h.721BABFE9AA038F9.idx  log.h.D9D3F0D960B2C102.idx  main.cpp.31079981DAD9FD55.idx  main.h.49D4A285F8518ACF.idx  math_core.h.D719EBF32E4C010F.idx  parser_funcs.h.8E3451230113B86F.idx  safe_alloc.h.88F4EA035FCF2E92.idx  stb_image.h.D394981024431B24.idx  sysmacros.h.4B7F2D8A3622E749.idx  textureLoader.cpp.6DAF62D188E69579.idx  textureLoader.h.EDE0AB0D8BA0ED00.idx  types.h.A29E9CA3255F793C.idx
lin_x64/: aspenEvo.xpl
src/: datarefs.c  datarefs.cpp  datarefs.h  device.c  device.cpp  device.h  draw_cairo.c  draw_cairo.h  globals.c  globals.cpp  globals.h  main.c  main.cpp  main.h  textureLoader.cpp  textureLoader.h
